Allow links to be filtered by tag

--- a/app/curation/curation.template.html
+++ b/app/curation/curation.template.html
@@ -1,12 +1,10 @@
-<!--
 <div class="tags">
-    <div class="tag" ng-repeat="tag in tags">
-        {{tag}}
+    <div class="tag" ng-repeat="tag in tags" ng-click="selectTag(tag)" ng-class="tag.selected ? 'selected' : ''">
+        {{tag.name}}
     </div>
 </div>
--->
 <div class="grid">
-    <div class="item" ng-repeat="item in items" ng-class="itemClass(item)">
+    <div class="item" ng-repeat="item in selectedItems" ng-class="itemClass(item)">
         <div class="item-details">
             <div class="item-type">{{item.type}}</div>
             <div class="item-title"><a href="{{item.url}}" target="_blank">{{item.title}}</a></div>
